# sharing-plugin-fmms

./: Makefile.in  configure  configure.ac
data/: Makefile.am  Makefile.in  sharing-fmms.service.xml.in
debian/: changelog  control  copyright  sharing-fmms.install  sharing-fmms.prerm
src/: Makefile.am  Makefile.in  plugin.c  send.c  send.h
