#
# This file is part of sharing-plugin-template
#
# Copyright (C) 2008-2009 Nokia Corporation. All rights reserved.
#
# This maemo code example is licensed under a MIT-style license,
# that can be found in the file called "COPYING" in the root
# directory.
#

services_DATA = sharing-fmms.service.xml sharing-fmms-post.png sharing-fmms-setup.png

EXTRA_DIST = $(services)

